--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@ html{
 
 body{
 	background-image: url("../images/Wiki-background_update_2.jpg");
-	margin: 10px;
 	color: blue;
 }
 
@@ -42,11 +41,13 @@ button{
 
 .gif{
 	margin: 10px;
-
+	min-height: 200px;
+	max-height: 400px;
 }
 
 img{
 	float: left;
+
 
 }
 
